# aimdb-homepilot

./: README.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
console/: Cargo.toml
console/src/: main.rs
ground/: Cargo.toml  flash.sh
ground/.cargo/: config.toml
ground/src/: main.rs
knx-gateway/: Cargo.toml  flash.sh  rust-toolchain.toml
knx-gateway/src/: main.rs
knx-mcp-server/: Cargo.toml
records/: Cargo.toml
records/src/: lib.rs  switch.rs  temperature.rs
tower/: Cargo.toml
tower/src/: main.rs
