[package]
name = "records"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core serialization support (always enabled with derive)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# For no_std string support (v0.7 for serde-json-core compatibility)
heapless = { version = "0.7", default-features = false, features = ["serde"] }

# JSON support - serde-json-core works in both std and no_std
serde-json-core = { version = "0.5", default-features = false }

# Optional: for aimdb integration
aimdb-core = { version = "0.2", optional = true, default-features = false }
aimdb-knx-connector = { version = "0.1", optional = true, default-features = false }

[features]
default = [] # no_std by default
knx = ["aimdb-knx-connector"] # KNX protocol support (DPT encoding/decoding)
monitors = ["aimdb-core"]
