[package]
name = "tower"
version = "0.1.0"
edition = "2021"

[dependencies]
# Records module (shared data types) - no features needed, uses monitors for logging
records = { path = "../records", features = ["monitors"] }

# AimDB core and Tokio adapter
aimdb-core = { version = "0.2", features = ["std"] }
aimdb-tokio-adapter = { version = "0.2", features = ["tokio-runtime"] }


# MQTT connector
aimdb-mqtt-connector = { version = "0.2", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
